# simcompanies-simulator

./: .cursorrules  .gitignore  README.md  abundance_resources.json  buildings.json  main.py  pyproject.toml  seasonal_resources.json  simtools.spec
.github/workflows/: build.yml
simtools/: __init__.py  api.py  calculator.py  cli.py  genetic.py
simtools/data/: buildings.json
simtools/models/: __init__.py  building.py  market.py  resource.py
