[project]
name = "simtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
]

[project.scripts]
simtools = "simtools.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
